--- a/styles/globals.css
+++ b/styles/globals.css
@@ -167,6 +167,52 @@
   --tracking-wide: calc(var(--tracking-normal) + 0.025em);
   --tracking-wider: calc(var(--tracking-normal) + 0.05em);
   --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+
+  @keyframes shake {
+    0% {
+      transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    5% {
+      transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    10% {
+      transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    15% {
+      transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    20% {
+      transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    25% {
+      transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    30% {
+      transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    35% {
+      transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    40% {
+      transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    45% {
+      transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    50% {
+      transform: translate(1px, -2px) rotate(-1deg);
+    }
+  }
 }
 
 body {
@@ -177,6 +223,7 @@ body {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
